--- a/assets/stylesheets/scss/module/project-section.scss
+++ b/assets/stylesheets/scss/module/project-section.scss
@@ -75,10 +75,28 @@
   }
   &-image {
     display: block;
+    position: relative;
     width: 100%;
     img {
+      position: relative;
       width: 100%;
+      z-index: 2;
     }
+    .payment-pattern {
+      left: 13%;
+      position: absolute;
+      top: 0;
+      width: 44%;
+      z-index: 1;
+    }
+    .reorganized_features-pattern {
+      left: 9%;
+      position: absolute;
+      top: 0;
+      width: 82%;
+      z-index: 1;
+    }
+
     &--half {
       margin-bottom: 40px;
       width: 100%;
@@ -98,6 +116,9 @@
     }
     &--no_margin {
       margin: 0;
+    }
+    &--shadow {
+      @include filter-shadow(0, 30, 48, rgba(0, 0, 0, 0.2), #000);
     }
   }
   &-images {
@@ -282,7 +303,13 @@
     background-color: $venmo;
     color: $white;
   }
+  &--lesser_padding {
+    padding: 60px 24px;
+  }
   &--less_padding {
+    padding: 60px 24px;
+  }
+  &--med_padding {
     padding: 60px 24px;
   }
 }
@@ -361,8 +388,14 @@
 @media screen and (min-width: 900px) {
   .project-section {
     padding: 160px 24px;
+    &--lesser_padding {
+      padding: 60px 24px;
+    }
     &--less_padding {
       padding: 80px 24px;
+    }
+    &--med_padding {
+      padding: 100px 24px;
     }
     &--product {
       padding: 0;
@@ -371,14 +404,22 @@
       padding: 50px 24px;
     }
     &-image {
+      .payment-pattern {
+        left: 22%;
+        width: 38%;
+      }
+      .reorganized_features-pattern {
+        left: 21%;
+        width: 71%;
+      }
       &--half {
         float: left;
         margin-bottom: 0;
         width: 50%;
-        &:nth-child(even) {
+        &:nth-child(odd) {
           padding-right: 50px;
         }
-        &:nth-child(odd) {
+        &:nth-child(even) {
           padding-left: 50px;
         }
       }
@@ -407,6 +448,7 @@
         &:nth-child(even) {
           padding-left: 50px;
         }
+
       }
     }
     &-images {
@@ -467,16 +509,28 @@
 }
 @media screen and (min-width: 1140px) {
   .project-section {
-    &-persona {
-      @include clearfix();
-      &-attributes {
-        float: left;
-        width: 40%;
+    &-text {
+      &--half {
+        &--venmo {
+          &:nth-child(odd) {
+            padding-right: 80px;
+          }
+          &:nth-child(even) {
+            padding-left: 80px;
+          }
+        }
       }
-      &-needs {
-        float: left;
-        padding-left: 30px;
-        width: 60%;
+    }
+    &-image {
+      &--half {
+        &--venmo {
+          &:nth-child(odd) {
+            padding-right: 80px;
+          }
+          &:nth-child(even) {
+            padding-left: 80px;
+          }
+        }
       }
     }
   }
